<resources>
    <string name="app_name">SpaceX</string>
    <string name="mission_name">mission name</string>
    <string name="site_name">site Name</string>
    <string name="launch_year">Launch Year</string>
    <string name="details_about_the_launch">Details About the Launch</string>
    <string name="error">Error!!</string>
    <string name="details_concerning_the_launch">Details Concerning the Launch</string>
    <string name="image_of_specific_launch">Image of specific launch</string>
    <string name="launch_id">launch id</string>
    <string name="under_construction">Work In Progress</string>

</resources>