<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="launchDetails"
            type="com.example.spacex.LaunchDetailsQuery.Data" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/radius"
        app:cardCornerRadius="@dimen/radius">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".presentation.fragments.LaunchDetailsFragment"
            android:padding="@dimen/padding">

            <ImageView
                android:id="@+id/LaunchImage"
                android:scaleType="fitXY"
                android:layout_marginStart="50dp"
                android:padding="@dimen/radius"
                android:layout_width="@dimen/width"
                android:layout_height="@dimen/height"
                app:imageUrl="@{launchDetails.launch.links.mission_patch}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/image_of_specific_launch" />

            <TextView
                android:id="@+id/launchId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@{`ID: ` + launchDetails.launch.id}"
                android:textSize="@dimen/txtSize"
                android:textStyle="bold"
                android:contentDescription="@string/launch_id"
                android:textColor="@android:color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/LaunchImage" />

            <TextView
                android:id="@+id/siteName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@{`SiteName: ` + launchDetails.launch.launch_site}"
                android:textSize="@dimen/txtSize"
                android:textStyle="bold"
                android:contentDescription="@string/site_name"
                android:textColor="@android:color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/launchId" />

            <TextView
                android:id="@+id/missionName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/radius"
                android:textSize="@dimen/txtSize"
                android:textStyle="bold"
                android:text="@{`MissionName: ` +launchDetails.launch.mission_name}"
                android:contentDescription="@string/mission_name"
                android:textColor="@android:color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/siteName" />

            <TextView
                android:id="@+id/launchYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/radius"
                android:textSize="@dimen/txtSize"
                android:textStyle="bold"
                android:text="@{`LaunchYear: ` +launchDetails.launch.launch_year}"
                android:contentDescription="@string/launch_year"
                android:textColor="@android:color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/missionName" />
            <TextView
                android:id="@+id/detailsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details_about_the_launch"
                android:textStyle="italic"
                android:textSize="@dimen/sizeTwo"
                android:textColor="#0000FF"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/detailsTitle"/>

            <TextView
                android:id="@+id/details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/radius"
                android:textSize="@dimen/txtSize"
                android:textStyle="bold"
                android:text="@{launchDetails.launch.details}"
                android:contentDescription="@string/details_concerning_the_launch"
                android:textColor="@android:color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detailsTitle" />

            <ProgressBar
                android:id="@+id/launches_fetch_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/launches_empty_text"
                style="@style/Base.TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/error"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/launches_fetch_progress"
                tools:visibility="visible" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</layout>